# matthew-lake-csu-cis-636-project-submission

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test-script.sh
.github/workflows/: test.yml
deliverables/: Project Plan.docx  QA Presentation.pptx  Software Quality Assurance Course Project Final Report.docx  Test Case Specification.docx  Test Plan.docx
tests/: conftest.py  person.py
tests/aggregation/: test_aggregation.py
tests/document/: test_bulk_updating_documents.py  test_creating_and_bulk_indexing_documents.py  test_creating_and_indexing_a_document.py  test_deleting_a_document.py  test_retrieving_a_document_by_its_id.py  test_updating_a_document.py
tests/index/: test_creating_an_index.py  test_deleting_an_index.py  test_modifying_an_index.py  test_reindexing_an_index.py
tests/index_alias/: test_creating_an_index_alias.py  test_deleting_an_index_alias.py  test_updating_an_index_alias.py
tests/ping/: test_client_ping.py
tests/search/: test_search.py
