[tool.poetry]
name = "csu-cis-636-project"
version = "0.1.0"
description = ""
authors = ["Matthew Lake <matthew_lake@fastmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
pytest = "8.3.5"
black = "25.1.0"
mypy = "1.15.0"
flake8 = "7.2.0"
opensearch-py = "2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
